Another attempt to fix flicker

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-    background-color: rgb(147, 168, 179);
     background-image: url(imgs/backgrounds/bedroom_morning_background\ fixed.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
